# deezer-downloader

./: .gitignore  DeezerDownload.py  Dockerfile  LICENSE  README.md  TODO  Vagrantfile  pyproject.toml  requirements.txt  requirements.txt.in  todo.txt
.github/workflows/: dockerhub.yaml  tests.yaml
app/: app.py  configuration.py  credentials.py  deezer.py  music_backend.py  requirements.txt  settings.ini.example  settings.py  spotify.py  tests.py  threadpool_queue.py  todo.txt  youtube.py  youtubedl.py
app/deezer/: deezer.py  deezer_login.py  spotify.py
app/static/js/: custom.js
app/templates/: index.html  index2.html  youtube.html
app/youtube/: youtube_loader.py
deezer_downloader/: .gitignore  __init__.py  app.py  configuration.py  deezer.py  spotify.py  threadpool_queue.py  youtubedl.py
deezer_downloader/cli/: cli.py  deezer-downloader.ini.template  runner.py
deezer_downloader/web/: app.py  music_backend.py
deezer_downloader/web/static/css/: custom.css
deezer_downloader/web/static/js/: custom.js
deezer_downloader/web/templates/: autoindex.html  index.html
deployment/: Vagrantfile  deezer.service  music-nginx.conf
deployment/docker/: Dockerfile  README.md  create-docker-image.sh  docker-compose.yml  push-image-to-dockerhub.sh  test-image.sh
docker/: Dockerfile  docker-compose.yaml  push-image-to-dockerhub.sh  test-image.sh  update-base-image.sh
docs/: TODO  api_endpoints.md
systemd/: deezer-stay-loggedin.service  deezer-stay-loggedin.timer  deezer.service
tests/: test_deezer.py  test_deezer_downloader.py  test_runner.py  test_spotify.py  test_threadpool_queue.py
