[tool.poetry]
name = "deezer-downloader"
version = "2.4.0"
description = "download music from Deezer with a nice front end"
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"
packages = [{include = "deezer_downloader"}]
repository = "https://github.com/kmille/deezer-downloader"
homepage = "https://github.com/kmille/deezer-downloader"


[tool.poetry.dependencies]
python = "^3.9.1"
requests = {extras = ["socks"], version = "^2.28.2"}
flask = "^3.0.3"
python-mpd2 = "^3.0.5"
yt-dlp = "*"
pycryptodome = "^3.16.0"
jinja2 = "^3.1.2"
flask-autoindex = "^0.6.6"
giphypop = "^0.3"
waitress = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-magic = "^0.4.27"
flake8 = "^7.1.1"
pdbpp = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deezer-downloader = 'deezer_downloader.cli.runner:main'

[tool.setuptools.package-data]
deezer_downloader = ["cli/settings.ini.template"]
